--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,48 @@
-spring.application.name=ContentManagementSystem
+# src/main/resources/application.properties
+# ============================================
+# DATABASE - PostgreSQL
+# ============================================
+spring.datasource.url=jdbc:postgresql://localhost:5432/cms_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
+# ============================================
+# OPENAI CONFIGURATION - GPT-4o
+# ============================================
+openai.api.key=key
+openai.model=gpt-4o
+# ============================================
+# FILE UPLOAD
+# ============================================
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+upload.directory=uploads/
+upload.temp.directory=uploads/temp/
+# ============================================
+# JWT CONFIGURATION
+# ============================================
+jwt.secret=content-management-system-jwt-secret-key-very-secure-and-long-minimum-256-bits
+jwt.expiration=86400000
+# ============================================
+# SERVER CONFIGURATION
+# ============================================
+server.port=8080
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=never
+# ============================================
+# LOGGING
+# ============================================
+logging.level.root=INFO
+logging.level.com.github.yakupovdev.cms=DEBUG
+logging.level.org.springframework.web=INFO
+logging.level.org.springframework.security=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
